testCases/semanticAnalyzerTestCases/correct/usingLibraryFunctions.cs16

/*
    Author: Chris Kaebe
    Date: Feb 21, 2016
*/


int main(void){
    int x; bool b;
    x := readint();
    writeint(x);

    b := readbool();
    writebool(b);

    return x;
}

