testCases/semanticAnalyzerTestCases/error/usingIdBeforeDecl.cs16
/*
    Author: Chris Kaebe
    Date: Feb 21, 2016
*/


int main(void){
    x:=5;
    {
        int x;
        ;
    }

    return 1;
}

